--- a/style.css
+++ b/style.css
@@ -5,10 +5,11 @@
 }
 
 body {
-    background-image: radial-gradient(circle, #333333 0%, #4d4d4d 100%);
+    background-image: radial-gradient(circle, #70707077 0%, #fdfdfd 100%);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 1.3rem;
     line-height: 1.5em;
+    transition: background-image 0.5s ease;
 }
 
 h1 {
@@ -40,7 +41,7 @@ button {
 }
 
 button:hover {
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.3);
 }
 
 button:active {
@@ -50,4 +51,36 @@ button:active {
 
 .buttons {
     padding: 17px;
+}
+
+#darkModeButton {
+    display: block;
+    text-align: center;
+    margin: 0 auto;
+    padding: 15px;
+    border-radius: 50%;
+}
+
+#darkModeButton:hover {
+    color: black;
+    background-color: white;
+}
+
+@media screen and (max-width: 600px) {
+    .container {
+        max-width: 90%;
+        margin: 30px auto;
+        padding: 10px;
+        overflow: hidden;
+    }
+
+    .relogio {
+        font-size: 3em;
+    }
+
+    button {
+        max-width: 100%;
+        padding: 10px 20px;
+        font-size: 0.9rem;
+    }
 }
